--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,8 @@ TestResults/
 /_ReSharper.*
 *.ReSharper.*
 ############
+.vs/
+############
 # Packages #
 ############
 # it’s better to unpack these files and commit the raw source
@@ -52,6 +54,10 @@ TestResults/
 ######################
 *.log
 *.sqlite
+*.mdf
+*.ldf
+*.db
+*.sqbpro
 # OS generated files #
 ######################
 .DS_Store?
